objects/Song__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <label>Artist</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative Music</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Classical Music</fullName>
                </value>
                <value>
                    <fullName>Country Music</fullName>
                </value>
                <value>
                    <fullName>Dance Music</fullName>
                </value>
                <value>
                    <fullName>Easy Listening</fullName>
                </value>
                <value>
                    <fullName>Hip Hop / Rap</fullName>
                </value>
                <value>
                    <fullName>Indie Pop</fullName>
                </value>
                <value>
                    <fullName>Jazz</fullName>
                </value>
                <value>
                    <fullName>Latin Music</fullName>
                </value>
                <value>
                    <fullName>new Age</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Pop (Popular music)</fullName>
                </value>
                <value>
                    <fullName>R&amp;B / Soul</fullName>
                </value>
                <value>
                    <fullName>Reggae</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>World Music / Beats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_m__c</fullName>
        <label>Length (m)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Count__c</fullName>
        <label>Track Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Licences__c</fullName>
        <label>Track Licences</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Song</label>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_licence</fullName>
        <active>true</active>
        <errorConditionFormula>Track_Count__c  &gt;=  Track_Licences__c</errorConditionFormula>
        <errorDisplayField>Track_Licences__c</errorDisplayField>
        <errorMessage>Amount of tracks cannot exceed the number of available track licenses.</errorMessage>
    </validationRules>
</CustomObject>